# netherbrain

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  TODO.md  db-migrate.sh  entrypoint.sh  presets.toml  pyproject.toml  pytest.ini  seed.toml  tox.ini
.github/actions/setup-python-env/: action.yml
.github/workflows/: main.yml  on-release-main.yml
dev/: dev-setup.sh  dev.env  docker-compose.dev.yml
docs/: architecture.md  configuration.md  getting-started.md  presets.md
netherbrain/: cli.py
netherbrain/agent_runtime/: alembic.ini  app.py  auth.py  context.py  deps.py  instrument.py  log.py  middleware.py  registry.py  settings.py
netherbrain/agent_runtime/alembic/: env.py
netherbrain/agent_runtime/costs/: __init__.py
netherbrain/agent_runtime/db/: __init__.py  engine.py  tables.py
netherbrain/agent_runtime/execution/: __init__.py  coordinator.py  delegate.py  environment.py  events.py  external_tools.py  hooks.py  input.py  launch.py  mailbox_prompt.py  mcp.py  prompt.py  resolver.py  runtime.py
netherbrain/agent_runtime/managers/: __init__.py  conversations.py  execution.py  files.py  importer.py  mailbox.py  presets.py  seed.py  sessions.py  shell.py  summary.py  users.py  workspaces.py
netherbrain/agent_runtime/models/: __init__.py  api.py  enums.py  events.py  (+4 more)
netherbrain/im_gateway/: gateway.py
spec/agent_runtime/: 00-overview.md  01-session.md  02-configuration.md  03-execution.md  04-events-and-streaming.md  05-control.md  06-async-agents.md  07-api.md  08-multi-tenancy.md  09-fileserve.md  10-notifications.md  11-summary-and-search.md  phase8-design.md
spec/im_gateway/: 00-overview.md  01-bridge.md  02-discord.md
tests/: conftest.py  test_agent_runtime.py  test_db_integration.py  test_im_gateway.py
tests/agent_runtime/: conftest.py  test_agui_protocol.py  test_auth.py  test_compress.py  test_conversations.py  test_coordinator.py  test_environment.py  test_execution_api.py  test_external_tools.py  test_files.py  test_health.py  test_history_tools.py  test_input.py  test_notifications.py  test_presets.py  test_prompt.py  test_resolver.py  test_runtime.py  test_s3_store.py  test_sessions.py  test_shell.py  test_store.py  test_toolsets.py  test_workspaces.py
ui/: design-system.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
ui/spec/: 00-overview.md  01-layout.md  02-chat.md  03-settings.md  04-auth.md  05-files.md
ui/src/: App.tsx  index.css
(+88 files in other folders)
