[project]
name = "netherbrain"
version = "0.0.1"
description = "Netherbrain is an general agent service created for my homelab, local first with IM integration."
authors = [{ name = "Wh1isper", email = "jizhongsheng957@gmail.com" }]
readme = "README.md"
keywords = ['python']
requires-python = ">=3.13,<4.0"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "boto3>=1.35.0",
    "botocore>=1.35.0",
    "click>=8.1.0",
    "fastapi>=0.134.0",
    "uvicorn[standard]>=0.41.0",
    "httpx>=0.28.0",
    "jinja2>=3.1.0",
    "loguru>=0.7.0",
    "pydantic>=2.0.0",
    "pydantic-ai>=0.2.0",
    "pydantic-settings>=2.0.0",
    "ya-agent-sdk[all]>=0.26.1",
    "y-agent-environment>=0.4.0",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "psycopg[binary,pool]>=3.1",
    "redis[hiredis]>=7.0.0",
    "sse-starlette>=3.3.0",
    "anyio>=4.0.0",
]

[project.urls]
Repository = "https://github.com/wh1isper/netherbrain"

[project.scripts]
netherbrain = "netherbrain.cli:main"

[dependency-groups]
dev = [
    "pytest>=7.2.0",
    "pre-commit>=2.20.0",
    "pytest-asyncio>=0.25.3",
    "testcontainers[postgres,redis]>=4.0.0",
    "tox-uv>=1.11.3",
    "deptry>=0.22.0",
    "pyright>=1.1.350",
    "ruff>=0.9.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
include = ["netherbrain"]
typeCheckingMode = "standard"

[tool.ruff]
target-version = "py313"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S106"]

[tool.ruff.format]
preview = true

[tool.deptry]
per_rule_ignores = {DEP002 = ["httpx", "redis", "ya-agent-sdk", "psycopg"]}
